--- a/app/templates/patient_consent.html
+++ b/app/templates/patient_consent.html
@@ -144,10 +144,31 @@
 {{ super() }}
 <script>
 function revokeConsent(consentId) {
-    if (confirm('Are you sure you want to revoke this consent?')) {
-        // TODO: Implement AJAX call to revoke consent
-        alert('This feature will be implemented soon.');
+    if (!confirm('Are you sure you want to revoke this consent?')) {
+        return;
     }
+
+    const csrfToken = document.querySelector('meta[name="csrf-token"]')?.content;
+
+    fetch(`/api/consent/${consentId}/revoke`, {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json',
+            'X-CSRFToken': csrfToken
+        }
+    })
+    .then(response => response.json())
+    .then(data => {
+        if (data.success) {
+            window.location.reload();
+        } else {
+            alert(data.message || 'Failed to revoke consent.');
+        }
+    })
+    .catch(err => {
+        console.error('Error revoking consent:', err);
+        alert('An error occurred while revoking consent.');
+    });
 }
 </script>
 {% endblock %}
