--- a/app/templates/user_settings.html
+++ b/app/templates/user_settings.html
@@ -190,7 +190,7 @@
                         </div>
 
                         <div class="mb-3">
-                            {{ clinic_form.clinic_percentage_amount.label(class="form-label") }}
+                            {{ clinic_form.clinic_percentage_amount.label(class="form-label", text="Clinic Share (%)") }}
                             {{ clinic_form.clinic_percentage_amount(class="form-control" + (" is-invalid" if clinic_form.clinic_percentage_amount.errors else "")) }}
                             {% if clinic_form.clinic_percentage_amount.errors %}
                                 <div class="invalid-feedback">
